@@ -2,6 +2,12 @@
 \title{ecospace News}
 \encoding{UTF-8}
 
+\section{Changes in version 1.2.4 (2018-02-18)}{
+  \itemize{
+    \item Corrected examples for rbind_listdf.
+  }
+}
+
 \section{Changes in version 1.2.3 (2018-02-17)}{
   \itemize{
     \item Change working directory reset so no longer permanently changes wd to temp dir.
